# ohmi_audit

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LOCALIZATION_IMPLEMENTATION.md  README.md  VIEWS_RESTRUCTURING.md  db.sqlite3  docker-compose.prod.yml  docker-compose.services.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt
common/: all_labels_dict.py  base_view.py  common_forms_data.py  common_models_data.py  custom_signals.py  db_management.py  pagination_decorator.py  serializers.py
custom_middleware/: custom_logging_middleware.py  error_handling_middleware.py  rate_limiting_middleware.py
media_files/audit_files/: Microsoft_SQL_Server_Management_Studio_18.docx
ohmi_audit/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
ohmi_audit/hr_management/: apps.py  urls.py  views.py
ohmi_audit/main_app/: admin.py  apps.py  consumers.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
ohmi_audit/main_app/migrations/: 0001_initial.py  0002_customer_audit_created_at_audit_updated_at_and_more.py  0007_audit_image.py  (+7 more)
static/css/: custom_functions.js  style.css
templates/: 404.html  500.html  base.html  index.html
templates/forms/: audit_form.html  customer_form.html
templates/hr_management/: hr_management_index.html
templates/includes/: card_buttons_bar.html  card_buttons_bar_and_search.html  content_container.html  db_content_container.html  footer.html  language_switcher.html  left_menu_bar.html  main_page_text.html  navigation_bar.html  pagination.html  task_status.html
templates/main_app/: db_management.html  index.html  signup.html
templates/tables/: customer_table.html
tests/: conftest.py
tests/main_app/: test_api.py  test_db_management.py  test_forms.py  test_models.py  test_serializers.py  test_tasks.py  test_views.py
(+15 files in other folders)
